API and backend changes to allow support for mapgen settings
Cargo dependency updates
2.0 download file name changes
